--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,8 @@ volumes:
     jupyterlab-data:
     homeassistant-data:
     rhasspy-data:
+    octoprint-data:
+    traefik:
 services:
   nodered:
     restart: always
@@ -14,6 +16,24 @@ services:
       - 'nodered-data:/data'
     ports:
       - "1880:1880"
+    labels:
+      traefik.enable: 'true'
+      traefik.http.services.nodered.loadbalancer.server.port: '1880'  
+
+      traefik.http.routers.nodered-balena.rule: 'HostRegexp(`{subdomain:[a-zA-Z0-9\-]+}.balena-devices.com`)'
+      traefik.http.routers.nodered-balena.entrypoints: 'web'
+      traefik.http.routers.nodered-balena.tls: 'false'   
+
+      traefik.http.routers.nodered.rule: 'HostRegexp(`{subdomain:[a-zA-Z0-9\-]+}.local`) || HostRegexp(`{subdomain:[a-zA-Z0-9\-]+}.localdomain`) || HostRegexp(`{subdomain:[a-zA-Z0-9\-]+}.lan`)'
+      traefik.http.routers.nodered.entrypoints: 'websecure'
+      traefik.http.routers.nodered.tls: 'true'
+
+      traefik.http.routers.nodered-insecure.rule: 'HostRegexp(`{subdomain:[a-zA-Z0-9\-]+}.local`) || HostRegexp(`{subdomain:[a-zA-Z0-9\-]+}.localdomain`) || HostRegexp(`{subdomain:[a-zA-Z0-9\-]+}.lan`)'
+      traefik.http.routers.nodered-insecure.entrypoints: 'web'
+      traefik.http.routers.nodered-insecure.middlewares: 'redirect-to-https'
+
+      traefik.http.middlewares.redirect-to-https.redirectscheme.scheme: 'https'
+      traefik.http.middlewares.redirect-to-https.redirectscheme.permanent: 'true'
   influxdb:
     restart: always
     build: ./influxdb
@@ -35,19 +55,37 @@ services:
       - 'grafana-data:/data'
     depends_on:
       - influxdb
+    labels:
+      traefik.enable: 'true'
+      traefik.http.services.grafana.loadbalancer.server.port: '3000'  
+
+      traefik.http.routers.grafana-balena.rule: 'HostRegexp(`{subdomain:[a-zA-Z0-9\-]+}.balena-devices.com`)'
+      traefik.http.routers.grafana-balena.entrypoints: 'web'
+      traefik.http.routers.grafana-balena.tls: 'false'   
+
+      traefik.http.routers.grafana.rule: 'HostRegexp(`{subdomain:[a-zA-Z0-9\-]+}.local`) || HostRegexp(`{subdomain:[a-zA-Z0-9\-]+}.localdomain`) || HostRegexp(`{subdomain:[a-zA-Z0-9\-]+}.lan`)'
+      traefik.http.routers.grafana.entrypoints: 'websecure'
+      traefik.http.routers.grafana.tls: 'true'
+
+      traefik.http.routers.grafana-insecure.rule: 'HostRegexp(`{subdomain:[a-zA-Z0-9\-]+}.local`) || HostRegexp(`{subdomain:[a-zA-Z0-9\-]+}.localdomain`) || HostRegexp(`{subdomain:[a-zA-Z0-9\-]+}.lan`)'
+      traefik.http.routers.grafana-insecure.entrypoints: 'web'
+      traefik.http.routers.grafana-insecure.middlewares: 'redirect-to-https'
+
+      traefik.http.middlewares.redirect-to-https.redirectscheme.scheme: 'https'
+      traefik.http.middlewares.redirect-to-https.redirectscheme.permanent: 'true'
   mosquitto:
     restart: always
     build: ./mosquitto
     ports:
       - "1883:1883"
       - "1884:1884"
-  jupyterlab:
-    restart: always
-    build: ./jupyterlab
-    ports:
-      - "8888:8888"
-    volumes:
-      - 'jupyterlab-data:/data'
+#  jupyterlab:
+#    restart: always
+#    build: ./jupyterlab
+#    ports:
+#      - "8888:8888"
+#    volumes:
+#      - 'jupyterlab-data:/data'
 #  homeassistant:
 #    restart: always
 #    build: ./homeassistant
@@ -79,3 +117,57 @@ services:
 #    depends_on:
 #     - influxdb
 #     - mosquitto
+  octoprint:
+    build: ./octoprint
+    restart: always
+    volumes:
+      - 'octoprint-data:/data'
+    privileged: true
+    ports:
+      - '5000:5000'
+    labels:
+      io.balena.features.supervisor-api: '1'
+      io.balena.features.balena-api: '1'
+      traefik.enable: 'true'
+      traefik.http.services.octoprint.loadbalancer.server.port: '5000'  
+
+      traefik.http.routers.octoprint-balena.rule: 'HostRegexp(`{subdomain:[a-zA-Z0-9\-]+}.balena-devices.com`)'
+      traefik.http.routers.octoprint-balena.entrypoints: 'web'
+      traefik.http.routers.octoprint-balena.tls: 'false'   
+
+      traefik.http.routers.octoprint.rule: 'HostRegexp(`{subdomain:[a-zA-Z0-9\-]+}.local`) || HostRegexp(`{subdomain:[a-zA-Z0-9\-]+}.localdomain`) || HostRegexp(`{subdomain:[a-zA-Z0-9\-]+}.lan`)'
+      traefik.http.routers.octoprint.entrypoints: 'websecure'
+      traefik.http.routers.octoprint.tls: 'true'
+
+      traefik.http.routers.octoprint-insecure.rule: 'HostRegexp(`{subdomain:[a-zA-Z0-9\-]+}.local`) || HostRegexp(`{subdomain:[a-zA-Z0-9\-]+}.localdomain`) || HostRegexp(`{subdomain:[a-zA-Z0-9\-]+}.lan`)'
+      traefik.http.routers.octoprint-insecure.entrypoints: 'web'
+      traefik.http.routers.octoprint-insecure.middlewares: 'redirect-to-https'
+
+      traefik.http.middlewares.redirect-to-https.redirectscheme.scheme: 'https'
+      traefik.http.middlewares.redirect-to-https.redirectscheme.permanent: 'true'
+  traefik:
+    restart: always
+    build: ./traefik
+    ports:
+      - '80:80/tcp'
+      - '443:443/tcp'
+      - '8080:8080'
+    volumes:
+      - 'traefik:/etc/traefik'
+    environment:
+      TRAEFIK_LOG_LEVEL: 'INFO'
+      TRAEFIK_ENTRYPOINTS_WEBSECURE_ADDRESS: ':443'
+      TRAEFIK_ENTRYPOINTS_WEB_ADDRESS: ':80'
+      TRAEFIK_PROVIDERS_DOCKER: 'true'
+      TRAEFIK_PROVIDERS_DOCKER_EXPOSEDBYDEFAULT: 'false'
+      TRAEFIK_PROVIDERS_DOCKER_ENDPOINT: 'unix:///var/run/balena.sock'
+      TRAEFIK_API_INSECURE: 'true'
+    labels:
+      io.balena.features.balena-socket: 'true'
+  mdns-publisher:
+    build: ./mdns-publisher
+    environment:
+      DBUS_SYSTEM_BUS_ADDRESS: 'unix:path=/host/run/dbus/system_bus_socket'
+    labels:
+      io.balena.features.dbus: '1'
+
